--- a/templates/events.html
+++ b/templates/events.html
@@ -136,7 +136,7 @@
             src: url(/static/Valorant-Font.ttf) format("truetype");
         }
     </style>
-    <title>Document</title>
+    <title>IMPROV</title>
 </head>
 
 <body>
