--- a/templates/secret.html
+++ b/templates/secret.html
@@ -99,7 +99,7 @@
 }
 
 </style>
-    <title>Document</title>
+    <title>IMPROV</title>
 </head>
 <body>
 <div class="form-container">
@@ -114,7 +114,7 @@
 <input type="text" name="name" placeholder="Enter Participant Name"/>
 </div>
 <br><br><br>
-<input type="submit" value="Enter">
+<a href="/events"><input  type="submit" value="Enter"></a>
 </form>
 
 </div>
