--- a/templates/events.html
+++ b/templates/events.html
@@ -171,7 +171,7 @@
     </div>
 
     <script>
-        var socket = io.connect('https://' + document.domain + ':' + location.port);
+        var socket = io.connect('http://' + document.domain + ':' + location.port);
         var form = document.getElementById('form');
         form.addEventListener('mousemove', (e) => {
 
